--- a/src/main/webapp/WEB-INF/views/resources/css/style.css
+++ b/src/main/webapp/WEB-INF/views/resources/css/style.css
@@ -10375,3 +10375,32 @@ nav[aria-label="breadcrumb"] li:before {
       .site-footer .social li a:hover {
         background: #00204a;
         color: #fff; }
+.comment-box {
+   margin-top: 30px;
+ 
+
+}
+
+.comment-item {
+   border-bottom: 1px solid #ddd;
+   margin-bottom: 12px;
+   padding-bottom: 8px;
+   background-color: #fff;
+}
+
+.comment-author {
+   font-weight: bold;
+   color: #004080;
+   margin-right: 10px;
+}
+
+.comment-date {
+   font-size: 0.85rem;
+   color: #888;
+}
+
+.comment-content {
+   margin-top: 4px;
+   font-size: 1rem;
+}
+        
